# my_config

./: Taskfile.yml  mise.toml  pyproject.toml
src/: main.py
