[project]
name = "250411-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "yachi882", email = "yachi4work@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
250411-chatbot = "250411_chatbot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.11.5",
]
